# happyfox

./: .gitignore  alembic.ini  docker-compose.yml  fetch_email.py  process_email.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 9267a77b40d9_create_email_table.py
db/: engine.py  models.py
rule_processor/: rule_processor.py  rules.json
tests/: test_fetch_email.py  test_rule_processor.py
